@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-23T01:57:52Z",
-  "count" : 285,
-  "count_minmax" : [ 285, 341 ],
-  "count_decinc" : [ -56, +0 ],
+  "timestamp" : "2022-05-23T08:29:56Z",
+  "count" : 179,
+  "count_minmax" : [ 179, 341 ],
+  "count_decinc" : [ -162, +0 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +0 ]
