@@ -1,10 +1,10 @@
 {
-  "count": 5012,
+  "count": 5026,
   "uniques": 29,
   "clones": [
     {
       "timestamp": "2022-05-09T00:00:00Z",
-      "count": 285,
+      "count": 179,
       "uniques": 2
     },
     {
@@ -71,6 +71,11 @@
       "timestamp": "2022-05-22T00:00:00Z",
       "count": 353,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-05-23T00:00:00Z",
+      "count": 120,
+      "uniques": 1
     }
   ]
 }
